# ALTAIR-vision

./: .gitmodules  BallDistance.py  README.md  camera_calibration.yaml
ball-detector/: CMakeLists.txt
ball-detector/src/: ball_detector.py
install/: local_setup.sh  setup.sh
install/altair_calibration/share/altair_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ball-detector/share/ball-detector/: package.bash  package.zsh
install/ball_detPy/lib/ball_detPy/: ball_DetPub  ball_det
install/ball_detPy/share/ball_detPy/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_detect/lib/ball_detect/: ball_det
install/ball_detect/share/ball_detect/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_detect/share/ball_detect/cmake/: ament_cmake_export_dependencies-extras.cmake  ball_detectConfig.cmake  ball_detect__rosidl_typesupport_cExport.cmake  ball_detect__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_ball_detect__rosidl_generator_cppExport.cmake  export_ball_detect__rosidl_generator_pyExport-noconfig.cmake  export_ball_detect__rosidl_typesupport_fastrtps_cExport.cmake  export_ball_detect__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/ball_detect/share/ball_detect/launch/: ball_detect.launch.py
install/ball_detect/share/ball_detect/msg/: BallInfo.json
install/ball_detector/lib/ball_detector/: ball_detection.py  ball_detector
install/ball_detector/share/ball_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_detector/share/ball_detector/cmake/: ament_cmake_export_libraries-extras.cmake  ball_detectorConfig.cmake  ball_detector__rosidl_typesupport_cExport-noconfig.cmake  ball_detector__rosidl_typesupport_cExport.cmake  ball_detector__rosidl_typesupport_cppExport.cmake  ball_detector__rosidl_typesupport_introspection_cExport-noconfig.cmake  ball_detector__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_ball_detector__rosidl_generator_cExport.cmake  export_ball_detector__rosidl_generator_cppExport.cmake  export_ball_detector__rosidl_generator_pyExport-noconfig.cmake  export_ball_detector__rosidl_typesupport_fastrtps_cExport.cmake  export_ball_detector__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/ball_detector/share/ball_detector/msg/: BallDistance.idl  BallDistance.json
install/camera_calibration/lib/camera_calibration/: cameracalibrator  cameracheck  tarfile_calibration
install/camera_calibration/share/camera_calibration/: package.sh
install/ipm_interfaces/share/ipm_interfaces/: local_setup.sh  package.sh  package.zsh
install/ipm_library/share/ipm_library/: package.sh  package.zsh
install/soccer_field_map_generator/lib/soccer_field_map_generator/: cli  gui
install/soccer_field_map_generator/share/soccer_field_map_generator/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/soccer_ipm/lib/soccer_ipm/: ipm
install/soccer_ipm/share/soccer_ipm/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/temp_ball_detector/share/temp_ball_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usb_cam/lib/usb_cam/: usb_cam_node_exe
install/usb_cam/share/usb_cam/: package.sh
install/video_subscriber/lib/video_subscriber/: gui_subscriber
install/video_subscriber/share/video_subscriber/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_msg/share/vision_msg/: package.bash  package.zsh
log/: latest_build  latest_version-check
src/: Ball_detection.py  fieldDetection.py
src/altair_calibration/: CMakeLists.txt
src/altair_calibration/include/altair_calibration/: cam_calibration.hpp
src/altair_calibration/launch/: cam_calibration.launch.py
src/altair_calibration/src/: cam_calibration.cpp
src/ball-detector/: CMakeLists.txt  package.xml
src/ball-detector/src/: ball_detector.py
src/ball-detector/vision_msgs/: ball-detector.msg
src/ball_detPy/: package.xml  setup.cfg  setup.py
src/ball_detect/: CMakeLists.txt
src/ball_detect/include/ball_detect/: ball_detect.hpp
src/ball_detect/launch/: ball_detect.launch.py
src/ball_detect/msg/: BallInfo.msg
src/ball_detect/src/: ball_detect.cpp  ball_detector_node.cpp
src/ball_detector/: CMakeLists.txt  setup.py
src/ball_detector/src/: ball_detection.py  ball_detector.py
src/ball_detector/v42L_cam/: cam.py  cam_set.py
src/sample_program/: ballballan.py  ballballan2.py  fieldDet.py  fieldDetection.py  fieldVideo.py
src/sample_program/Ball_det_cpp/: ballDet.cpp
src/sample_program/FieldDetBy/: debugField3.py  fieldVideo.py  field_det2Video.py  field_detection2.py  field_detection3.py
src/sample_program/ball_detection/: CMakeLists.txt  ball.cpp
src/sample_program/forFieldDet/: Zhangsuen.py  ey.cpp  fromAzma.py  fromClaudeAi.py  oy.cpp  test1Line.py  test2Line.py  test3.Line.py  testing2Line.py  testing3Line.py  testingDigestion.py  testingGraphBuild.py
src/temp_ball_detPy/: package.xml
src/temp_ball_detector/: CMakeLists.txt
src/video_subscriber/: setup.cfg  setup.py
vision-dashboard/: package-lock.json  package.json
(+80 files in other folders)
